# hammurabiX

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  Makefile  README.md  bitbucket-pipelines.yml  makefile_coma  makefile_linux  makefile_mac  makefile_ulysses  paper.md  setup.py
INSTALL/: Makefile  makefile.ini
cache/: Makefile
contrib/utilities/: check_indentation.sh  indent  indent-all  indent_common.sh
data/: getfig.sh  params_ec_wmap_mock_fitting.xml  params_gc.xml  params_template.xml
docker/: Dockerfile
examples/: precision_test.ipynb  precision_tests.py  visual_b_rnd.py
hampyx/: __init__.py  hampyx.py  hampyx_class.py  params_class.py
include/: ap_err.h  bfield.h  breg.h  brnd.h  cgs_units.h  cgs_units_file.h  cgsunits.h  class_breg.h  class_brnd.h  class_cparamlib.h  class_cre.h  class_fe.h  class_fernd.h  class_grid.h  class_int.h  class_pond.h  cre.h  crefield.h  dfield.h  fe.h  fereg.h  fernd.h  grid.h  hamdis.h  hamio.h  hamp.h  hampix.h  hampixma.h  hampixp.h  hamsk.h  hamtype.h  hamunits.h  hamvec.h  hvec.h  integrator.h  namespace_dragonize.h  namespace_toolkit.h  param.h  pipeline.h  pond.h  (+4 more)
install/: Makefile  doxy.in  makefile.ini  makefile_coma  makefile_linux  makefile_mac  makefile_ulysses
joss/: README.md  paper.bib  paper.md
lib/: README
mfcache/: Makefile  README.md  root_makefile  unitest_makefile
python_utils/: fit.py  mock_data_prep.py  wrapper.py
source/field/b/: breg.cc  breg_cart.cc  breg_helix.cc  breg_jaffe.cc  breg_jf12.cc  breg_lsa.cc  breg_unif.cc  breg_wmap.cc  brnd.cc  brnd_es.cc  brnd_jf12.cc  brnd_mhd.cc
source/field/cre/: cre.cc  cre_ana.cc  cre_num.cc  cre_unif.cc
source/field/d/: dreg.cc  dreg_unif.cc  drnd.cc
source/field/fe/: fereg.cc  fereg_unif.cc  fereg_ymw16.cc  fernd.cc  fernd_dft.cc
source/field/gmf/: breg.cc  breg_jaffe.cc  breg_unif.cc  breg_wmap.cc  brnd.cc  brnd_es.cc  brnd_mhd.cc
source/field/te/: tereg.cc  tereg_unif.cc  tereg_ymw16.cc  ternd.cc  ternd_dft.cc
source/grid/: grid.cc  grid_b.cc  grid_breg.cc  grid_brnd.cc  grid_cre.cc  grid_dreg.cc  grid_drnd.cc  grid_fereg.cc  grid_fernd.cc  grid_int.cc  grid_obs.cc  grid_te.cc  grid_tereg.cc  grid_ternd.cc
source/integrator/: integrator.cc
source/main/: hammurabi.cc  main_alt.cc  main_std.cc
source/model/b/: bmodel.cc  bmodel_cart.cc  bmodel_es.cc  bmodel_helix.cc  bmodel_jaffe.cc  bmodel_lsa.cc  bmodel_mhd.cc  bmodel_unif.cc
source/model/cre/: cremodel.cc  cremodel_ana.cc  cremodel_unif.cc
source/model/te/: temodel.cc  temodel_dft.cc  temodel_unif.cc  temodel_ymw16.cc
source/param/: param.cc
source/pipeline/: pipeline.cc
source/tools/: namespace_toolkit.cc  tinyxml2.cc  toolkit.cc
src/: class_breg.cc  class_brnd.cc  class_cre.cc  class_fe.cc  class_fernd.cc  class_grid.cc  class_int.cc  class_pond.cc  hammurabi.cc  namespace_toolkit.cc  pond.cc  tinyxml2.cc
src/dragon/: class_cparamlib.cc  dragon.cc  namespace_dragonize.cc
src/field/cre/: cre.cc  cre_ana.cc  cre_num.cc  cre_test.cc  cre_unif.cc
src/field/fe/: fereg.cc  fereg_test.cc  fereg_unif.cc  fereg_ymw16.cc  fernd.cc  fernd_dft.cc
src/field/gmf/: breg.cc  breg_jaffe.cc  breg_test.cc  breg_unif.cc  breg_wmap.cc  brnd.cc  brnd_es.cc  brnd_mhd.cc
src/fields/cre/: cre.cc  cre_ana.cc  cre_num.cc  cre_test.cc  cre_verify.cc
src/fields/fe/: fe.cc  fe_ymw16.cc  fereg.cc  fereg_test.cc  fereg_verify.cc  fereg_ymw16.cc  fernd.cc  fernd_dft.cc  fernd_global.cc  fernd_iso.cc
src/fields/gmf/: breg.cc  breg_jaffe.cc  breg_test.cc  breg_verify.cc  breg_wmap.cc  brnd.cc  brnd_anig.cc  brnd_anil.cc  brnd_es.cc  brnd_global.cc  brnd_iso.cc  brnd_local.cc  brnd_mhd.cc
src/generic/: class_grid.cc
src/grid/: grid.cc  grid_breg.cc  grid_brnd.cc  grid_cre.cc  grid_fereg.cc  grid_fernd.cc  grid_int.cc
src/grids/: grid.cc  grid_breg.cc  grid_brnd.cc  grid_cre.cc  grid_fe.cc  grid_fereg.cc  grid_fernd.cc  grid_int.cc
src/hammurabi/: README  class_breg.cc  class_brnd.cc  class_cre.cc  class_fe.cc  class_fernd.cc  class_int.cc  hammurabi.cc  namespace_toolkit.cc
src/integrator/: integrator.cc
src/integrators/: integrator.cc
src/main/: hammurabi.cc
src/mains/: hammurabi.cc
src/param/: param.cc
src/params/: param.cc  pond.cc
src/tools/: namespace_toolkit.cc  tinyxml2.cc
templates/: maskprep.py  params_template.xml  run.sh
tests/: CMakeLists.txt
tests/integration_tests/: CMakeLists.txt  ymw16_tests.cc
tests/integration_tests/reference/: ymw16_unitest.xml
tests/sanity_tests/: CMakeLists.txt  parameter_tests.cc
tests/unit_tests/: CMakeLists.txt  grid_tests.cc  hamdis_tests.cc  hamio_tests.cc  hamp_tests.cc  hampixma_tests.cc  hampixp_tests.cc  hamsk_tests.cc  hamvec_tests.cc  int_tests.cc  integrator_tests.cc  node_tests.cc  timer_tests.cc  tools_tests.cc  vector_tests.cc
tests/unit_tests/reference/: int_tests_01.xml  int_tests_02.xml  mask_stripe_60deg.fits  tools_tests.xml
tutorials/: README.md  precision_test.ipynb  tutorial_01.ipynb  tutorial_e01.ipynb  tutorial_e02.ipynb  tutorial_e03.ipynb
unitest/: Makefile  hello.cc  int_unitest.cc  param_unitest.cc  timer_unitest.cc  tool_unitest.cc  ymw16_unitest.cc
unitest/reference/: example.xml  ymw16_unitest.xml
wiki/: README.md
wiki/class/: bfield.md  crefield.md  grid.md  integrator.md  param.md  param_breg_grid.md  param_breg_jaffe.md  param_breg_lsa.md  param_breg_unif.md  param_brnd_global_es.md  param_brnd_grid.md  param_brnd_local_mhd.md  param_cre_ana.md  param_cre_grid.md  param_cre_unif.md  param_obs_grid.md  param_tereg_grid.md  param_tereg_unif.md  param_tereg_ymw16.md  param_ternd_grid.md  pipeline.md  tefield.md  timer.md
wiki/index/: author.md  design.md  install.md  perf.md  version.md
