FILE(COPY ${CMAKE_CURRENT_LIST_DIR}/reference DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
SET(_ymw16_tests ymw16_tests.cc)

FOREACH(_t ${_ymw16_tests})
  ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES})
  TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${ALL_INCLUDE_DIR} ${GTEST_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT} ${ALL_LIBRARIES} hammurabi)
  ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()