FILE(COPY ${CMAKE_CURRENT_LIST_DIR}/reference DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
SET(_timer_tests timer_tests.cc)
SET(_hamvec_tests hamvec_tests.cc)
SET(_hampixp_tests hampixp_tests.cc)
SET(_hampixma_tests hampixma_tests.cc)
SET(_tools_tests tools_tests.cc)
SET(_grid_tests grid_tests.cc)
SET(_integrator_tests integrator_tests.cc)


FOREACH(_t ${_hamvec_tests})
  ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES})
  TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${ALL_INCLUDE_DIR} ${GTEST_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT} ${ALL_LIBRARIES} hammurabi)
  ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_hampixp_tests})
  ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES})
  TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${ALL_INCLUDE_DIR} ${GTEST_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT} ${ALL_LIBRARIES} hammurabi)
  ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_hampixma_tests})
  ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES})
  TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${ALL_INCLUDE_DIR} ${GTEST_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT} ${ALL_LIBRARIES} hammurabi)
  ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_timer_tests})
  ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES})
  TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${ALL_INCLUDE_DIR} ${GTEST_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT} ${ALL_LIBRARIES} hammurabi)
  ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_tools_tests})
  ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES})
  TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${ALL_INCLUDE_DIR} ${GTEST_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT} ${ALL_LIBRARIES} hammurabi)
  ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_grid_tests})
  ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES})
  TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${ALL_INCLUDE_DIR} ${GTEST_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT} ${ALL_LIBRARIES} hammurabi)
  ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()

FOREACH(_t ${_integrator_tests})
  ADD_EXECUTABLE(${_t}_exe ${_t} ${GTEST_LIB_SOURCES} ${GTEST_MAIN_SOURCES})
  TARGET_INCLUDE_DIRECTORIES(${_t}_exe PRIVATE ${ALL_INCLUDE_DIR} ${GTEST_INCLUDE_DIRS})
  TARGET_LINK_LIBRARIES(${_t}_exe ${CMAKE_THREAD_LIBS_INIT} ${ALL_LIBRARIES} hammurabi)
  ADD_TEST(${_t} ${_t}_exe)
ENDFOREACH()